syntax = "proto3";

package opendebrid;

option go_package = "github.com/viperadnan-git/opendebrid/internal/proto/gen";

service NodeService {
    // Worker calls this on startup to register with controller
    rpc Register(RegisterRequest) returns (RegisterResponse);

    // Worker sends periodic heartbeats (bidirectional stream)
    rpc Heartbeat(stream HeartbeatPing) returns (stream HeartbeatPong);

    // Worker calls this on graceful shutdown to deregister
    rpc Deregister(DeregisterRequest) returns (Ack);

    // Controller dispatches a download job to worker
    rpc DispatchJob(DispatchJobRequest) returns (DispatchJobResponse);

    // Controller queries worker for file list
    rpc GetJobFiles(JobFilesRequest) returns (JobFilesResponse);

    // Controller tells worker to cancel a job
    rpc CancelJob(CancelJobRequest) returns (Ack);

    // Controller tells worker to remove a job and its files
    rpc RemoveJob(RemoveJobRequest) returns (Ack);

    // Controller asks worker to resolve cache key for a URL
    rpc ResolveCacheKey(CacheKeyRequest) returns (CacheKeyResponse);

    // Worker pushes batch job status updates to controller
    rpc PushJobStatuses(PushJobStatusesRequest) returns (Ack);

    // Worker asks controller for valid storage keys on this node (for orphan cleanup)
    rpc ListNodeStorageKeys(ListNodeStorageKeysRequest) returns (ListNodeStorageKeysResponse);

    // Worker asks controller to resolve a download token (avoids DB on worker)
    rpc ResolveDownloadToken(ResolveTokenRequest) returns (ResolveTokenResponse);

    // Worker sends disk storage keys after registration for verified job reconciliation
    rpc ReconcileNode(ReconcileNodeRequest) returns (ReconcileNodeResponse);

    // Worker reports upload completion/failure to controller
    rpc ReportUpload(ReportUploadRequest) returns (Ack);

    // Worker requests pending uploads to process
    rpc ListPendingUploads(ListPendingUploadsRequest) returns (ListPendingUploadsResponse);
}

message ListNodeStorageKeysRequest {
    string node_id = 1;
}

message ListNodeStorageKeysResponse {
    repeated string storage_keys = 1;
}

message RegisterRequest {
    string node_id = 1;
    string file_endpoint = 2;
    repeated string engines = 3;
    int64 disk_total = 4;
    int64 disk_available = 5;
    string version = 6;
    bytes metadata = 7;
}

message RegisterResponse {
    bool accepted = 1;
    string message = 2;
    int32 heartbeat_interval_sec = 3;
    bytes config = 4;
}

message HeartbeatPing {
    string node_id = 1;
    int64 disk_available = 2;
    int32 active_jobs = 3;
    map<string, bool> engine_health = 4;
    int64 timestamp = 5;
    bytes metrics = 6;
    int64 disk_total = 7;
}

message HeartbeatPong {
    bool acknowledged = 1;
    repeated PendingAction actions = 2;
}

message PendingAction {
    string type = 1;
    bytes payload = 2;
}

message DispatchJobRequest {
    string job_id = 1;
    string engine = 2;
    string url = 3;
    string user_id = 4;
    map<string, string> options = 5;
    bytes extra = 6;
    string storage_key = 7;
}

message DispatchJobResponse {
    bool accepted = 1;
    string engine_job_id = 2;
    string error = 3;
    string file_location = 4;
}

message JobStatusReport {
    string job_id = 1;
    string node_id = 2;
    string status = 3;
    string engine_state = 4;
    double progress = 5;
    int64 speed = 6;
    int64 total_size = 7;
    int64 downloaded_size = 8;
    string file_location = 9;
    string error = 10;
    bytes extra = 11;
    string engine_job_id = 12;
    string name = 13;
}

message JobFilesRequest {
    string job_id = 1;
    string engine_job_id = 2;
    string engine = 3;
    string storage_key = 4;
}

message JobFilesResponse {
    repeated FileEntry files = 1;
}

message FileEntry {
    string path = 1;
    int64 size = 2;
    string storage_uri = 3;
    string content_type = 4;
}

message CancelJobRequest {
    string job_id = 1;
    string engine_job_id = 2;
    string engine = 3;
}

message RemoveJobRequest {
    string job_id = 1;
    string engine_job_id = 2;
    string engine = 3;
    string storage_key = 4;
}

message CacheKeyRequest {
    string engine = 1;
    string url = 2;
}

message CacheKeyResponse {
    string cache_key_type = 1;
    string cache_key_value = 2;
    string error = 3;
}

message DeregisterRequest {
    string node_id = 1;
}

message PushJobStatusesRequest {
    string node_id = 1;
    repeated JobStatusReport statuses = 2;
}

message Ack {
    bool ok = 1;
    string message = 2;
}

message ResolveTokenRequest {
    string token = 1;
    bool increment = 2;
}

message ResolveTokenResponse {
    bool valid = 1;
    string storage_uri = 2;
    string error = 3;
}

message ReconcileNodeRequest {
    string node_id = 1;
    repeated string storage_keys = 2;
}

message ReconcileNodeResponse {
    bool ok = 1;
    repeated string valid_storage_keys = 2;
    int32 restored_count = 3;
    int32 failed_count = 4;
}

message ReportUploadRequest {
    string node_id = 1;
    string job_id = 2;
    string remote_uri = 3;
    string error = 4;
}

message ListPendingUploadsRequest {
    string node_id = 1;
}

message ListPendingUploadsResponse {
    repeated PendingUploadJob jobs = 1;
}

message PendingUploadJob {
    string job_id = 1;
    string storage_key = 2;
    string engine = 3;
}
